cli/tests/testdata/bench/unresolved_promise.out
Check [WILDCARD]/bench/unresolved_promise.ts
error: Top-level await promise never resolved
await new Promise((_resolve, _reject) => {});
^
    at <anonymous> ([WILDCARD]bench/unresolved_promise.ts:1:1)
